app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: liatrio-app-deployment
  labels:
    app: liatrio-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: liatrio-app
  template:
    metadata:
      labels:
        app: liatrio-app
    spec:
      containers:
      - name: liatrio-app
        # Image for testing locally
        # image: kelbycodes/liatrio-app:1.0
        image: us-south1-docker.pkg.dev/GOOGLE_PROJECT/liatrio-app/node:12
        ports:
        - containerPort: 8080
