web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: liatrio-app-deployment-web-service
  namespace: default
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    run: web
  type: NodePort
---
