ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: liatrio-app-ingress
  # annotations:
  #   nginx.ingress.kubernetes.io
spec:
  ingressClassName: nginx-ingress
  rules:
    - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              # name: test
              name: test
              port:
                number: 8080
